# MoonReader_tools

./: .gitignore  .travis.yml  Changelog.md  LICENSE.txt  LICESNSE.md  Makefile  MoonReader.py  README.md  TestDescriptionUnpacking.ipynb  an_format_spec  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py  tox.ini
moonreader_tools/: __init__.py  books.py  conf.py  drobpox_utils.py  errors.py  main.py  notes.py  parsers.py  stat.py  utils.py
moonreader_tools/accessors/: __init__.py  base_accessor.py  file_reader.py  pdf_accessor.py
moonreader_tools/datamodel/: annotation.py  book.py  statistics.py
moonreader_tools/finders/: __init__.py
moonreader_tools/finders/dropbox/: finder.py  utils.py
moonreader_tools/finders/fs/: finder.py
moonreader_tools/handlers/: __init__.py  drobpox_utils.py  dropbox.py  fs_handler.py
moonreader_tools/parsers/: __init__.py  base.py  fb2_parser.py  file_reader.py  note_extractor.py  notes.py  pdf_parser.py  stat_parser.py
tests/: base.py  results.xml  test_all.py  test_books.py  test_integration.py  test_notes.py  test_parsers.py  test_stats.py  test_utils.py
tests/book_fixtures/: Brinkman_S._Konec_Yepohi_Self_Help_Ka.fb2.zip.an  Brinkman_S._Konec_Yepohi_Self_Help_Ka.fb2.zip.po  Do_Smerti_Zdorov.fb2.an  Do_Smerti_Zdorov.fb2.po  How_Linux_Works.pdf.an  How_Linux_Works.pdf.po  LoremIpsum.fb2.an  LoremIpsum.fb2.po  LoremIpsum.pdf.an  LoremIpsum.pdf.po
tests/dto/: test_book.py  test_note.py  test_statistics.py
